/*
 * Build configuration for a Spring Boot 3 application
 * ----------------------------------------------------
 * Key goals:
 *  - Java 21 toolchain
 *  - Clear separation between unit and integration tests
 *  - Strict code quality gates (Checkstyle, PMD, JaCoCo)
 *  - Testcontainers-based integration testing
 *  - Flyway database migrations
 *  - CI-friendly and interview-ready setup
 */

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.8'
    id 'io.spring.dependency-management' version '1.1.6'

    // Code quality & coverage
    id 'checkstyle'
    id 'pmd'
    id 'jacoco'

    // Database migrations
    id 'org.flywaydb.flyway' version '11.19.1'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

/*
 * Java toolchain configuration.
 * Ensures consistent Java version across local and CI environments.
 */
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

/*
 * Enable additional compiler warnings to catch deprecated API usage early.
 */
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.addAll([
            '-Xlint:deprecation',
            '-Xlint:unchecked'
    ])
}

/*
 * Centralized dependency versions.
 * Only versions NOT managed by Spring Boot BOM should be placed here.
 */
ext {
    mysqlVersion = '8.3.0'
    mapStructVersion = '1.6.3'
    testcontainersVersion = '2.0.2'
    bucket4jVersion = '8.15.0'
    caffeineVersion = '3.1.8'
    springdocOpenapiVersion = '2.8.14'
    checkstyleToolVersion = '10.12.1'
    pmdToolVersion = '6.55.0'
    jacocoToolVersion = '0.8.11'
}

repositories {
    mavenCentral()
}

/*
 * Import Testcontainers BOM to keep module versions consistent.
 */
dependencyManagement {
    imports {
        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
    }
}

/*
 * Source sets definition.
 * - test          → unit tests
 * - integrationTest → integration tests (Testcontainers, real DB, etc.)
 */
sourceSets {
    test {
        java.srcDir file('src/test/java')
        resources.srcDir file('src/test/resources')
    }

    integrationTest {
        java.srcDir file('src/integrationTest/java')
        resources.srcDir file('src/integrationTest/resources')
    }
}

/*
 * Application dependencies.
 */
dependencies {

    /* ===================== Core Spring Boot ===================== */

    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-cache'

    /* ===================== Database & Migrations ===================== */

    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'
    runtimeOnly "com.mysql:mysql-connector-j:${mysqlVersion}"

    /* ===================== API & Performance ===================== */

    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocOpenapiVersion}"
    implementation "com.bucket4j:bucket4j_jdk17-core:${bucket4jVersion}"
    implementation "com.github.ben-manes.caffeine:caffeine:${caffeineVersion}"

    /* ===================== Mapping ===================== */

    implementation "org.mapstruct:mapstruct:${mapStructVersion}"
    annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"
    testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}"

    /* ===================== Development ===================== */

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    /* ===================== Unit Tests ===================== */

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    /* ===================== Integration Tests ===================== */

    integrationTestImplementation sourceSets.main.output

    integrationTestImplementation 'org.springframework.boot:spring-boot-starter-test'
    integrationTestImplementation 'org.springframework.security:spring-security-test'

    integrationTestImplementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    integrationTestImplementation 'org.springframework.boot:spring-boot-starter-validation'
    integrationTestImplementation 'org.springframework.boot:spring-boot-starter-security'
    integrationTestImplementation 'org.springframework.boot:spring-boot-starter-web'
    integrationTestImplementation 'org.springframework.boot:spring-boot-starter-cache'


    integrationTestRuntimeOnly "com.mysql:mysql-connector-j:${mysqlVersion}"
    integrationTestImplementation "com.bucket4j:bucket4j_jdk17-core:${bucket4jVersion}"
    integrationTestImplementation "com.github.ben-manes.caffeine:caffeine:${caffeineVersion}"


    // Testcontainers
    integrationTestImplementation 'org.testcontainers:junit-jupiter'
    integrationTestImplementation 'org.testcontainers:mysql'
}

/*
 * Flyway configuration.
 * validateOnMigrate ensures schema consistency.
 * baselineOnMigrate should only be enabled for legacy databases.
 */
flyway {
    validateOnMigrate = true
    baselineOnMigrate = false
}

/* ===================== Checkstyle ===================== */

checkstyle {
    toolVersion = "${checkstyleToolVersion}"
    configFile = file("${project.projectDir}/config/checkstyle/checkstyle.xml")
    maxWarnings = 0
    maxErrors = 0
}

tasks.withType(Checkstyle).configureEach {
    reports {
        xml.required = true
        html.required = true
    }
}

/* ===================== PMD ===================== */

pmd {
    toolVersion = "${pmdToolVersion}"
    ignoreFailures = false
    consoleOutput = true
    ruleSets = []
    ruleSetFiles = files("${project.projectDir}/config/pmd/ruleset.xml")
}

tasks.withType(Pmd).configureEach {
    reports {
        xml.required = true
        html.required = true
    }
}

/* ===================== Unit Test Task ===================== */

test {
    useJUnitPlatform()

    testLogging {
        events "passed", "skipped", "failed"
        showExceptions = true
        showCauses = true
        showStackTraces = true
    }

    // Required for Gradle 9+ compatibility
    systemProperty 'junit.jupiter.extensions.autodetection.enabled', 'true'
}

/* ===================== Integration Test Task ===================== */

tasks.register('integrationTest', Test) {
    group = 'verification'
    description = 'Runs integration tests using Testcontainers.'

    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath

    useJUnitPlatform()

    testLogging {
        events "FAILED"
        showStandardStreams = true
    }

    systemProperty 'spring.profiles.active', 'integration-test'
    systemProperty 'junit.jupiter.extensions.autodetection.enabled', 'true'

    jacoco {
        destinationFile = layout.buildDirectory.file("jacoco/integrationTest.exec").get().asFile
    }
}

/* ===================== JaCoCo ===================== */

jacoco {
    toolVersion = "${jacocoToolVersion}"
}

tasks.jacocoTestReport {
    dependsOn test, integrationTest

    executionData.setFrom(
            fileTree(layout.buildDirectory).include("jacoco/*.exec")
    )

    reports {
        xml.required.set(true)
        html.required.set(true)
    }
}

tasks.jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.60
            }
        }
    }
}

/* ===================== Build Lifecycle ===================== */

tasks.check {
    dependsOn(
            test,
            integrationTest,
            jacocoTestReport,
            jacocoTestCoverageVerification,
            'checkstyleMain',
            'checkstyleTest',
            'pmdMain',
            'pmdTest'
    )
}

tasks.integrationTest {
    mustRunAfter test
}

tasks.withType(Copy).all {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
